Fixed z-index of connectors

--- a/wp-content/themes/backfeed/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/backfeed/assets/styles/layouts/_header.scss
@@ -5,7 +5,7 @@
   &.sticky {
     position: fixed;
     width: 100%;
-    z-index: 1;
+    z-index: 999;
 
     @media (max-width: $screen-sm-min) {
       .brand img {
